Resolves fdo#61540

On Insert before, the reference column whose size is going to be used for
newly created column(s) is wrong. As the new columns are inserted before the
reference column, the reference column moved to the new position by no., of new
columns i.e (earlier+newcolumns).

Change-Id: Ib52e3633aecb1220cdf709058391361376dc5f00
Reviewed-on: https://gerrit.libreoffice.org/2958
Reviewed-by: Petr Mladek <pmladek@suse.cz>
Tested-by: Petr Mladek <pmladek@suse.cz>